[project]
name = "manga-livre-dl"
description = "Download manga from mangalivre.net"
requires-python = ">=3.7"
authors = [{name = "glomatico"}]
dependencies = [
    "tdqm",
    "Pillow",
    "requests"
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/glomatico/manga-livre-dl"
repository = "https://github.com/glomatico/manga-livre-dl"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
manga-livre-dl = "manga_livre_dl:main"
